# partsuite3.0

./: .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
app/: config.py  database.py  main.py  models.py  parser.py  schemas.py  services.py  storage.py
docs/: invoice_schema.md
fixtures/: sample_invoice.txt
frontend/: index.html  package.json
frontend/src/: App.jsx  main.jsx  theme.css
frontend/src/components/: InvoiceList.jsx  InvoiceView.jsx  NotReceivedReport.jsx  UploadForm.jsx
tests/: test_api.py  test_parser.py
